# ha-grouw-ble

./: .gitignore  AGENTS.md  DEVELOPMENT.md  README.md  README_da.md  README_sv.md  REVERSE_ENGINEERED.md  TESTING.md  automation_patch.gz.b64  hacs.json  pyproject.toml  renovate.json  requirements-test.txt  ruff.toml
.github/workflows/: apply_config_clean.yaml  renovate.yaml  test_unit.yaml  tests.yaml  validate_hacs.yaml  validate_hassfest.yaml
custom_components/grouw_ble_mower/: __init__.py  binary_sensor.py  ble_client.py  ble_protocol.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  lawn_mower.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/grouw_ble_mower/translations/: da.json  en.json  sv.json
reverse_engineered/: app_identity.md  ble_write_flow.md  bluekey_commands.md  dart_blutter_analysis.md  dym_protocol.md  gatt_table.md  index.md  java_kotlin_findings.md  manual_findings.md  native_crypto.md  response_parsing.md  sources.md
tests/: __init__.py  conftest.py  test_ble_client.py  test_ble_protocol.py  test_config_flow.py  test_coordinator.py  test_entity_availability.py  test_init.py  test_lawn_mower.py  test_services.py
