[project]
name = "ha-grouw-ble"
version = "1.2.1"
description = "Home Assistant integration for Grouw BLE robotic lawn mowers"
requires-python = ">=3.14.6,<3.15"
dependencies = []

[dependency-groups]
dev = [
  "aiousbwatcher",
  "pygrouw>=0.1.3.1",
  "pyserial",
  "pytest",
  "pytest-homeassistant-custom-component",
  "ruff==0.15.21",
]

[tool.uv]
package = false
